Prevent text in entry jumping when marking read status

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -396,6 +396,7 @@ input {
 
     .entry.selected.unread,
     .entry.unread {
+        margin-left: 3px;
         border-left:3px solid #5f9490;
     }
 
